# ECE414_Chopra_Hill

./: README.md
Lab03/: CMakeLists.txt  debounce_sw2.c  debounce_sw2.h  fsm.c  led_out.c  sw_in.c
Lab04/: CMakeLists.txt  touchscreen_demo.c  ts_lcd.c  ts_lcd_unittests.c
Lab04/sch/: #auto_saved_files#  Lab4_ADAFruit_LCDDisplay_Schematic.kicad_pro  Lab4_ADAFruit_LCDDisplay_Schematic.kicad_sch
Lab1/: blink2.c
Lab2/: CMakeLists.txt  blink2.c  led_out.c  main.c  sw_in.c  sw_in.h
Lab2 old/: CMakeLists.txt  led_out.c  main.c
Lab5/: CMakeLists.txt  main.c  tckFnct_calculator.c  tckFnct_calculator.h  touchNum.c  touchNum.h  ts_lcd.c  ts_lcd.h  user_interface.c  user_interface.h
Lab6/: 2024-11-11_19-09-19.lib  pid_control.c  pwm_demo.c  pwm_pin.c  pwm_pin.h
Lab6/ECE414 Lab6 KiCAD/: #auto_saved_files#  ECE414 Lab6 KiCAD.kicad_pro  ECE414 Lab6 KiCAD.kicad_sch  ~ECE414 Lab6 KiCAD.kicad_sch.lck
Lab6/ECE414 Lab6 KiCAD/MCP4822/: MCP4822-E_MS.kicad_sym  SOP65P490X110-8N.kicad_mod
Lab6/ECE414 Lab6 KiCAD/MCP6242/: DIP787W46P254L927H533Q8.kicad_mod  MCP6242-E_P.kicad_sym
Lab6/ECE414 Lab6 KiCAD/QRD1114 (2)/: ONS_QRD1114.kicad_mod  QRD1114.kicad_sym
Lab6/footprints.pretty/: QRD1114.kicad_mod
StudySense/: CMakeLists.txt  PIR.c  PIR.h  lora_trans.c
StudySense/Receiver/: rfid.c
